# atlas

./: .env.example  .gitignore  ANALISE_PRODUTO_VALE_DO_SILICIO.md  CHECKLIST_EXECUCAO_1A1.md  CHECKLIST_FASE_1_PRI.md  CLAUDE.md  INDICACOES_E_SAQUES.md  PRI_CONSULTORA_ARQUITETURA.md  PROXIMOS_PASSOS.md  README.md  add_typing_indicator.py  atlas_put_body_final.json  atlas_put_body_strict.json  atlas_put_body_strict2.json  atlas_put_response.json  atlas_put_response_final.json  atlas_put_response_strict2.json  atlas_workflow_clean.json  atlas_workflow_current.json  atlas_workflow_dump.json  atlas_workflow_fresh.json  atlas_workflow_modified.json  atlas_workflow_modified_v2.json  atlas_workflow_put.json  build_and_push.js  build_workflow.js  create_reactivation_workflow.py  create_recap_workflow.py  docker-compose.yml  dump_nodes.js  exec_2641.json  exec_2643.json  exec_2644.json  exec_2646.json  exec_2648.json  exec_2658.json  exec_4842.json  fix2.py  fix_atlas_node.py  fix_divisor_agent.py  (+46 more)
agno_api/: agent.py  mentor_consultant.py  pri_controller.py
agno_api/static/: manual.html
erros/: errros.docx
finance_engine/: config.py  database.py
finance_engine/models/: __init__.py  goal.py  message.py  preferences.py  session.py  snapshot.py  transaction.py  user.py
tests/: test_pri_dialog_controller.py  test_pri_golden_conversations.py  test_pri_mentor_state.py
