[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS — Assistente financeiro pessoal via WhatsApp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Banco de dados
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    # Validação e config
    "pydantic>=2.10.0",
    # Agno (agentes LLM)
    "agno>=1.4.0",
    "openai>=1.58.0",
    # Utilitários
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agno_api"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
